--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.14.0",
     "express-session": "^1.14.2",
     "lodash": "^4.16.6",
+    "module": "^1.2.5",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-oauth2": "^1.3.0",
